Bug 94164 - [BAT BYT/BSW] Runtime PM: *ERROR* Unclaimed access detected prior to suspending
Summary: [BAT BYT/BSW] Runtime PM: *ERROR* Unclaimed access detected prior to suspending
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: highest normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-15 16:51 UTC by Ville Syrjala
Modified: 2017-07-24 22:42 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: power/runtime PM


Attachments

Description Ville Syrjala 2016-02-15 16:51:15 UTC
Seems to have been present since
archive/results/CI_IGT_test/CI_DRM_1035/bsw-nuc-2/html/bsw-nuc-2@CI_DRM_1035@1
/igt@pm_rpm@basic-rte.html
Maybe that was when the check got added?

Doesn't seem to hit it every time.
Comment 1 Ville Syrjala 2016-02-22 15:04:11 UTC
Happens on BYT too since CI_DRM_1034 or so.
Comment 2 Matt Roper 2016-02-25 16:45:50 UTC
Seems to happen sporadically on kms_pipe_crc_basic@suspend-read-crc-pipe-c as well.
Comment 3 Tvrtko Ursulin 2016-03-04 10:01:21 UTC
Another sighting:

/archive/results/CI_IGT_test/Patchwork_1521/bsw-nuc-2/html/bsw-nuc-2@Patchwork_1521@1/igt@pm_rpm@basic-pci-d3-state.html
Comment 6 Joonas Lahtinen 2016-03-30 10:59:26 UTC
One more occurrance /archive/results/CI_IGT_test/Patchwork_1712/bsw-nuc-2/html/bsw-nuc-2@Patchwork_1712@1/igt@pm_rpm@basic-rte.html

Full message:

[drm:intel_runtime_suspend [i915]] *ERROR* Unclaimed access detected prior to suspending

Pretty safe to say this is BSW specific (not so much per test), so changing the title too.
Comment 7 Ville Syrjala 2016-04-12 17:55:14 UTC
Should be fixed now.

commit 71b8b41d5b3573ba4e669822d5736226e9bbfa5d
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Apr 11 16:56:31 2016 +0300

    drm/i915: Move DPINVGTT setup to vlv_display_irq_reset()

commit 766078df43db7227e6904bb51de636a4abedb01b
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Apr 11 16:56:30 2016 +0300

    drm/i915: Move vlv_init_display_clock_gating() to the display power well

commit 9918271efc7ab9e5efc9580270f67c126901b06f
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Apr 11 16:56:25 2016 +0300

    drm/i915: Skip display irq setup if display irqs aren't flagged as enabled


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.